--- a/app/src/main/res/layout-large-land/item_details_fragment.xml
+++ b/app/src/main/res/layout-large-land/item_details_fragment.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         tools:context=".itemFragments.ItemDetailsFragment">
@@ -16,7 +16,6 @@
             android:id="@+id/item_picture"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:contentDescription="Item picture"
             android:src="@drawable/default__item_image"
             app:layout_constraintBottom_toTopOf="@id/picture_guideline"
             app:layout_constraintEnd_toStartOf="@+id/central_guideline"
@@ -31,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.4" />
+            app:layout_constraintGuide_percent="0.29" />
 
         <TextView
             android:id="@+id/item_title"
@@ -59,6 +58,17 @@
             app:layout_constraintStart_toStartOf="@+id/item_location"
             app:layout_constraintTop_toBottomOf="@+id/item_location" />
 
+        <TextView
+            android:id="@+id/price_currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/currency"
+            android:textColor="#005BA3"
+            android:textSize="34sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/item_price"
+            android:layout_marginStart="4dp"
+            app:layout_constraintStart_toEndOf="@id/item_price"/>
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/central_guideline"
             android:layout_width="wrap_content"
@@ -79,22 +89,14 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
-            android:layout_width="0dp"
-            android:layout_height="455dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/picture_guideline">
-
-            <TextView
-                android:id="@+id/item_condition_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="condition_value"
-                android:textSize="24sp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/item_condition"
-                app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
+            app:layout_constraintTop_toBottomOf="@+id/picture_guideline"
+            app:layout_constraintVertical_bias="1.0">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/details_guideline"
@@ -108,10 +110,9 @@
                 android:id="@+id/main_characteristics"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/main_characteristics"
-                android:textSize="30sp"
+                android:textSize="34sp"
                 app:layout_constraintBottom_toTopOf="@+id/item_category"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/details_guideline"
@@ -125,9 +126,21 @@
                 android:fontFamily="sans-serif-light"
                 android:text="@string/category"
                 android:textSize="24sp"
-                app:layout_constraintBottom_toTopOf="@+id/item_location_details"
+                app:layout_constraintBottom_toTopOf="@+id/item_subcategory"
                 app:layout_constraintStart_toStartOf="@+id/main_characteristics"
                 app:layout_constraintTop_toBottomOf="@+id/main_characteristics" />
+
+            <TextView
+                android:id="@+id/item_subcategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="sans-serif-light"
+                android:text="@string/sub_cat"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/item_location_details"
+                app:layout_constraintStart_toStartOf="@+id/main_characteristics"
+                app:layout_constraintTop_toBottomOf="@+id/item_category" />
 
             <TextView
                 android:id="@+id/item_location_details"
@@ -138,8 +151,8 @@
                 android:text="@string/location"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/item_expire_date"
-                app:layout_constraintStart_toStartOf="@+id/item_category"
-                app:layout_constraintTop_toBottomOf="@+id/item_category" />
+                app:layout_constraintStart_toStartOf="@+id/item_subcategory"
+                app:layout_constraintTop_toBottomOf="@+id/item_subcategory" />
 
             <TextView
                 android:id="@+id/item_expire_date"
@@ -163,7 +176,7 @@
                 android:text="@string/item_condition"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/description_guideline"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/item_expire_date"
                 app:layout_constraintTop_toBottomOf="@+id/item_expire_date" />
 
             <androidx.constraintlayout.widget.Guideline
@@ -175,29 +188,45 @@
 
             <TextView
                 android:id="@+id/item_category_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="category_value"
+                android:text="@string/category"
                 android:textSize="24sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_category"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
+
+            <TextView
+                android:id="@+id/item_subcategory_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/sub_cat"
+                android:textSize="24sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/item_subcategory"
+                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <TextView
                 android:id="@+id/item_location_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="location_value"
+                android:text="@string/location"
                 android:textSize="24sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_location_details"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <TextView
                 android:id="@+id/item_expire_date_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="20/04/2020"
+                android:text="@string/expire_date"
                 android:textSize="24sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_expire_date"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <androidx.constraintlayout.widget.Guideline
@@ -205,7 +234,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.65" />
+                app:layout_constraintGuide_percent="0.50" />
 
             <TextView
                 android:id="@+id/item_description"
@@ -213,20 +242,32 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="@string/description"
-                android:textSize="30sp"
+                android:text="@string/description_header"
+                android:textSize="34sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/description_guideline" />
 
             <TextView
                 android:id="@+id/item_description_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="description_value"
-                android:textSize="20sp"
+                android:text="@string/description"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/item_description"
                 app:layout_constraintTop_toBottomOf="@+id/item_description" />
+
+            <TextView
+                android:id="@+id/item_condition_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/condition_value"
+                android:textSize="24sp"
+                app:layout_constraintBaseline_toBaselineOf="@id/item_condition"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
