--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,10 +7,10 @@
         <item
             android:id="@+id/nav_itemList"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="My Items" />
+            android:title="@string/items" />
         <item
             android:id="@+id/showProfileFragment"
             android:icon="@drawable/ic_launcher_foreground"
-            android:title="My Profile" />
+            android:title="@string/profile" />
     </group>
 </menu>
