--- a/app/src/main/res/menu/show_profile_menu.xml
+++ b/app/src/main/res/menu/show_profile_menu.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/editProfileIcon"
         android:icon="@android:drawable/ic_menu_edit"
-        android:title="Edit"
+        android:title="@string/edit"
         app:showAsAction="always" />
 </menu>
