--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FFC107</color>
-    <color name="colorLightPrimary">#607D8B</color>
+    <color name="colorLightPrimary">#7B97A2</color>
 </resources>
