--- a/app/src/main/res/layout-large/fragment_item_edit.xml
+++ b/app/src/main/res/layout-large/fragment_item_edit.xml
@@ -224,7 +224,7 @@
 
             <Spinner
                 android:id="@+id/category_spinner"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
                 app:layout_constraintBottom_toTopOf="@+id/subcategory_spinner"
@@ -235,7 +235,7 @@
 
             <Spinner
                 android:id="@+id/subcategory_spinner"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toTopOf="@+id/item_location_value"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -260,9 +260,9 @@
                 android:id="@+id/item_expire_date_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/expire_date"
-                android:textSize="24sp"
+                android:hint="@string/date_edit"
                 android:selectAllOnFocus="true"
+                android:textSize="24sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_expire_date"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
