--- a/app/src/main/res/layout-large-land/activity_main.xml
+++ b/app/src/main/res/layout-large-land/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
+    android:layout_gravity="start"
     android:orientation="horizontal">
 
     <include
@@ -15,9 +16,11 @@
         android:layout_height="match_parent" />
 
     <LinearLayout
+        android:id="@+id/nav_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="start">
             <com.google.android.material.navigation.NavigationView
                 android:id="@+id/nav_view"
                 android:layout_width="wrap_content"
@@ -27,7 +30,4 @@
                 app:headerLayout="@layout/nav_header_main"
                 app:menu="@menu/activity_main_drawer" />
     </LinearLayout>
-
-
-
 </androidx.drawerlayout.widget.DrawerLayout>
