mega trick infame per nascondere l'hamburger in landscape, nonché purtroppo, le frecce per tornare indietro

--- a/app/src/main/res/layout-large-land/item_details_fragment.xml
+++ b/app/src/main/res/layout-large-land/item_details_fragment.xml
@@ -164,7 +164,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="sans-serif-light"
-                    android:text="@string/expire_date"
+                    android:text="@string/expire_date_header"
+                    android:textAlignment="viewEnd"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/item_condition"
                     app:layout_constraintStart_toStartOf="@+id/item_location_details"
