--- a/app/src/main/res/layout-large-land/fragment_item_edit.xml
+++ b/app/src/main/res/layout-large-land/fragment_item_edit.xml
@@ -201,7 +201,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="sans-serif-light"
-                    android:text="@string/expire_date"
+                    android:text="@string/expire_date_header"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/item_condition"
                     app:layout_constraintStart_toStartOf="@+id/item_location_details"
