--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/signInFragment">
+    app:startDestination="@id/nav_itemList">
 
     <fragment
         android:id="@+id/nav_itemList"
@@ -17,6 +17,9 @@
             app:exitAnim="@android:anim/slide_out_right"
             app:popEnterAnim="@android:anim/slide_in_left"
             app:popExitAnim="@android:anim/slide_out_right" />
+        <action
+            android:id="@+id/action_nav_itemList_to_signInFragment"
+            app:destination="@id/signInFragment" />
     </fragment>
     <fragment
         android:id="@+id/showProfileFragment"
@@ -61,9 +64,5 @@
     <fragment
         android:id="@+id/signInFragment"
         android:name="com.example.myapplication.SignInFragment"
-        android:label="SignInFragment" >
-        <action
-            android:id="@+id/action_signInFragment_to_nav_itemList"
-            app:destination="@id/nav_itemList" />
-    </fragment>
+        android:label="SignInFragment" />
 </navigation>
