--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -65,4 +65,12 @@
         android:id="@+id/signInFragment"
         android:name="com.example.myapplication.SignInFragment"
         android:label="SignInFragment" />
+    <fragment
+        android:id="@+id/onSaleListFragment"
+        android:name="com.example.myapplication.OnSaleListFragment"
+        android:label="OnSaleListFragment" >
+        <action
+            android:id="@+id/action_onSaleListFragment_to_nav_itemList"
+            app:destination="@id/nav_itemList" />
+    </fragment>
 </navigation>
