--- a/app/src/main/res/layout/item_details_fragment.xml
+++ b/app/src/main/res/layout/item_details_fragment.xml
@@ -36,11 +36,13 @@
             android:id="@+id/constraintLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/constraintLayout_fav"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/picture_guideline">
+            app:layout_constraintTop_toBottomOf="@+id/picture_guideline"
+            app:layout_constraintVertical_bias="0.0">
 
             <TextView
                 android:id="@+id/item_condition_value"
@@ -95,12 +97,12 @@
                 android:id="@+id/price_currency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:text="@string/currency"
                 android:textColor="#005BA3"
                 android:textSize="24sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_price"
-                android:layout_marginStart="4dp"
-                app:layout_constraintStart_toEndOf="@id/item_price"/>
+                app:layout_constraintStart_toEndOf="@id/item_price" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/details_guideline"
@@ -242,20 +244,51 @@
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/description_header"
                 android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/item_description_value"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/description_guideline" />
+                app:layout_constraintTop_toTopOf="@+id/description_guideline"
+                app:layout_constraintVertical_chainStyle="spread_inside" />
 
             <TextView
                 android:id="@+id/item_description_value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:text="@string/description"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/item_description"
-                app:layout_constraintTop_toBottomOf="@+id/item_description" />
+                app:layout_constraintStart_toStartOf="@+id/item_description" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout_fav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+
+            <TextView
+                android:id="@+id/fav_users_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:text="Users interested"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@id/fav_users"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fav_users"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="@id/fav_users_title"
+                app:layout_constraintTop_toBottomOf="@+id/fav_users_title" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
