--- a/app/src/main/res/layout/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout/item_details_buy_fragment.xml
@@ -49,6 +49,26 @@
             app:layout_constraintTop_toBottomOf="@+id/picture_guideline">
 
             <TextView
+                android:id="@+id/statusView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/status"
+                app:layout_constraintBottom_toBottomOf="@+id/item_price"
+                app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
+
+            <TextView
+                android:id="@+id/item_status2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/status"
+                app:layout_constraintBottom_toBottomOf="@+id/statusView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/statusView2" />
+
+            <TextView
                 android:id="@+id/item_condition_value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -281,27 +301,26 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0" />
 
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="#FFFFFF"
+                android:clickable="true"
+                android:focusable="true"
+                android:paddingBottom="8dp"
+                android:scaleType="center"
+                android:src="@android:drawable/btn_star"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_star"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="#FFFFFF"
-        android:clickable="true"
-        android:focusable="true"
-        android:scaleType="center"
-        android:src="@android:drawable/btn_star"
-        app:fabSize="normal"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 </RelativeLayout>
