--- a/app/src/main/res/layout/item_details_fragment.xml
+++ b/app/src/main/res/layout/item_details_fragment.xml
@@ -260,6 +260,28 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/item_description" />
 
+            <TextView
+                android:id="@+id/statusView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/status"
+                app:layout_constraintBottom_toTopOf="@+id/details_guideline"
+                app:layout_constraintStart_toStartOf="@+id/details_value_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/item_location" />
+
+            <TextView
+                android:id="@+id/item_status"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="@string/status"
+                app:layout_constraintBottom_toBottomOf="@+id/statusView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/statusView" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
