BUtton + fix status id on buy fragment

--- a/app/src/main/res/layout/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout/item_details_buy_fragment.xml
@@ -52,16 +52,15 @@
                 android:id="@+id/statusView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:text="@string/status"
                 app:layout_constraintBottom_toBottomOf="@+id/item_price"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <TextView
-                android:id="@+id/item_status2"
+                android:id="@+id/item_status_buy"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/status"
                 app:layout_constraintBottom_toBottomOf="@+id/statusView2"
@@ -316,6 +315,18 @@
                 app:fabSize="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:text="Button"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toBottomOf="@+id/seller_usr"
+                app:layout_constraintEnd_toEndOf="@+id/item_status_buy"
+                app:layout_constraintStart_toStartOf="@+id/item_status_buy"
+                app:layout_constraintTop_toBottomOf="@+id/item_status_buy"
+                tools:text="BUY" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
