--- a/app/src/main/res/layout/item_details_fragment.xml
+++ b/app/src/main/res/layout/item_details_fragment.xml
@@ -267,7 +267,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="@string/status"
+                android:text="@string/status_header"
                 app:layout_constraintBottom_toTopOf="@+id/details_guideline"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline"
                 app:layout_constraintTop_toBottomOf="@+id/item_location" />
