--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,7 +7,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_itemList"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/myitem_icon"
             android:title="@string/items" />
         <item
             android:id="@+id/showProfileFragment"
