--- a/app/src/main/res/layout/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout/item_details_buy_fragment.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/statusView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/status"
+                android:text="@string/status_header"
                 app:layout_constraintBottom_toBottomOf="@+id/item_price"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
